--- a/frontend/containers/navigationBar/navigationBar.css
+++ b/frontend/containers/navigationBar/navigationBar.css
@@ -1,6 +1,6 @@
 .navigationBar_view {
     display: grid;
-
+    grid-gap:1rem;
 }
 
 .navigationBar_homeIcon {
@@ -20,6 +20,7 @@
     grid-area: 1/2/1/2;
     height: 5rem;
     width: 7rem;
+    margin-left: 2rem;
     cursor: pointer;
     fill: none;
     stroke: var(--theme_color_icons);
@@ -39,4 +40,22 @@
     justify-self: center;
     grid-area: 2/1/2/1;
 
+}
+.navigationBar_polyPageIcon {
+    grid-area: 1/3/1/3;
+    height: 5rem;
+    width: 7rem;
+    cursor: pointer;
+    margin-left:3rem;
+    fill: none;
+    stroke: var(--theme_color_icons);
+    stroke-width: 0.5rem;
+}
+.navigationBar_polyPageIcon:hover {
+    stroke: var(--red);
+    transition: none;
+}
+
+.navigationBar_polyText {
+    grid-area: 2/3/2/3;
 }
